# chess-cpp

./: .gitignore  CMakeLists.txt  README.MD
include/: bitboard.h  board.h  chessboard.h  chessgame.h  chesslogic.h  fen.h  game.h  interface.h  move.h  movegen.h  piece.h  utils.h
src/: bitboard.cpp  board.cpp  chessboard.cpp  chessgame.cpp  chesslogic.cpp  fen.cpp  game.cpp  interface.cpp  main.cpp  move.cpp  movegen.cpp  piece.cpp  utils.cpp
test/: fen.cpp  perft.cpp  test.cpp
